--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  Copyright © zeotyn.de
+  2019 - mglnk.ml link shortener 
   <aside>
     {% if site.github_username %}
       {% include github.html username=site.github_username %}
