--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
 <header id="header">
    <a class="site-title" href="{{ "/" | relative_url}}"><h1>{{ site.title | escape }}</h1></a>
+   <p>a link shortener. very basic, but works.</p>
 </header>
