--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header id="header">
    <a class="site-title" href="{{ "/" | relative_url}}"><h1>{{ site.title | escape }}</h1></a>
-   <p>a link shortener. very basic, but works.</p>
+   <p>a link shortener. very basic, but works. Can be accessed using: https://link.mattg.cf/ https://linkmg.ml/ https://linkmg.cf/</p>
+   <b> https://mglnk.ml/ no longer works. </b>
 </header>
